Add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Mastering CSS: Tabs Component">
-    <title>Project Assignment: Tabs Component</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Mastering CSS: Tabs Component">
+  <title>Project Assignment: Tabs Component</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-    <div class="tabComponent">
-        <!-- Insert code to create tabbed components here -->
-        <input type="radio" name="tabs" value="home-decor" id="homeDecor" checked>
-        <label for="homeDecor">Home Decor</label>
-        <input type="radio" name="tabs" value="furniture" id="furniture">
-        <label for="furniture">Furniture</label>
-        <input type="radio" name="tabs" value="kitchen" id="kitchen">
-        <label for="kitchen">Kitchen</label>
-        <input type="radio" name="tabs" value="clearance" id="clearance">
-        <label for="clearance">Clearance</label>
+  <div class="tabComponent">
+    <!-- Insert code to create tabbed components here -->
+    <input type="radio" name="tabs" value="home-decor" id="homeDecor" checked>
+    <label for="homeDecor">Home Decor</label>
+    <input type="radio" name="tabs" value="furniture" id="furniture">
+    <label for="furniture">Furniture</label>
+    <input type="radio" name="tabs" value="kitchen" id="kitchen">
+    <label for="kitchen">Kitchen</label>
+    <input type="radio" name="tabs" value="clearance" id="clearance">
+    <label for="clearance">Clearance</label>
 
-        <div class="tab-content">Browse through our list of Home Decor Items</div>
-        <div class="tab-content">Flash Sale on Living Room and Bedroom Furniture</div>
-        <div class="tab-content">Bring the best out of the masterchef in you!!</div>
-        <div class="tab-content">Red hot deals at affordable prices. Check out our clearance section for more details.</div>
-    </div>
+    <div class="tab-content">Browse through our list of Home Decor Items</div>
+    <div class="tab-content">Flash Sale on Living Room and Bedroom Furniture</div>
+    <div class="tab-content">Bring the best out of the masterchef in you!!</div>
+    <div class="tab-content">Red hot deals at affordable prices. Check out our clearance section for more details.</div>
+  </div>
 </body>
 </html>
 
