Update responsive tab components

--- a/index.html
+++ b/index.html
@@ -12,18 +12,44 @@
   <div class="tabComponent">
     <!-- Insert code to create tabbed components here -->
     <input type="radio" name="tabs" value="home-decor" id="homeDecor" checked>
-    <label for="homeDecor">Home Decor</label>
     <input type="radio" name="tabs" value="furniture" id="furniture">
-    <label for="furniture">Furniture</label>
     <input type="radio" name="tabs" value="kitchen" id="kitchen">
-    <label for="kitchen">Kitchen</label>
     <input type="radio" name="tabs" value="clearance" id="clearance">
-    <label for="clearance">Clearance</label>
 
-    <div class="tab-content">Browse through our list of Home Decor Items</div>
-    <div class="tab-content">Flash Sale on Living Room and Bedroom Furniture</div>
-    <div class="tab-content">Bring the best out of the masterchef in you!!</div>
-    <div class="tab-content">Red hot deals at affordable prices. Check out our clearance section for more details.</div>
+    <div class="tabs tabs-lg-screen">
+      <label for="homeDecor">Home Decor</label>
+      <label for="furniture">Furniture</label>
+      <label for="kitchen">Kitchen</label>
+      <label for="clearance">Clearance</label>
+    </div>
+
+    <div class="tabs tabs-sm-screen tabs-sm-screen-decor">
+      <label for="homeDecor">Home Decor</label>
+    </div>
+    <div class="tab-content tab-content-decor">
+      <p>Browse through our list of Home Decor Items</p>
+    </div>
+
+    <div class="tabs tabs-sm-screen tabs-sm-screen-furniture">
+      <label for="furniture">Furniture</label>
+    </div>
+    <div class="tab-content tab-content-furniture">
+      <p>Flash Sale on Living Room and Bedroom Furniture</p>
+    </div>
+
+    <div class="tabs tabs-sm-screen tabs-sm-screen-kitchen">
+      <label for="kitchen">Kitchen</label>
+    </div>
+    <div class="tab-content tab-content-kitchen">
+      <p>Bring the best out of the masterchef in you!!</p>
+    </div>
+
+    <div class="tabs tabs-sm-screen tabs-sm-screen-clearance">
+      <label for="clearance">Clearance</label>
+    </div>
+    <div class="tab-content tab-content-clearance">
+      <p>Red hot deals at affordable prices. Check out our clearance section for more details.</p>
+    </div>
   </div>
 </body>
 </html>
